# ReGAE

./: .dockerignore  .gitignore  Dockerfile  README.md  download_data.py  guild.yml  pyproject.toml  requirements.txt  setup.py
graph_nn_vae/data/: __init__.py  adj_matrix_data_module.py  data_module.py  diag_block_repr_graph_data_module.py  diag_repr_graph_data_module.py  graph_loaders.py  smooth_learning_step_graph_data_module.py  synthetic_graphs_create.py  synthetic_graphs_module.py
graph_nn_vae/experiments/: decorators.py  experiment.py
graph_nn_vae/lr_schedulers/: __init__.py  metric_change_based.py
graph_nn_vae/metrics/: edge_accuracy.py  graph_drawer.py  graph_size.py  losses.py  precision_recall.py
graph_nn_vae/models/: autoencoder_base.py  autoencoder_components.py  base.py  classifier_base.py  classifier_components.py  edge_encoders.py  utils.py  vae.py
graph_nn_vae/util/: __init__.py  calc.py  draw.py  early_stopping.py  graphs.py  lists.py  reconstruction_loss.py  split_datasets.py  training_monitor.py
notebooks/: classifier_sandbox.ipynb  collect_classification_results.ipynb  generate_datasets.ipynb  generate_datsets.ipynb
rga/data/: __init__.py  adj_matrix_data_module.py  data_module.py  diag_repr_graph_data_module.py  graph_loaders.py  paired_data_modules.py  synthetic_graphs_create.py
rga/experiments/: calculate_metrics_to_paper.py  experiment.py
rga/metrics/: losses.py  (+4 more)
scripts/: clear_failed_guild_runs.py  evaluate_matrices_on_datasets.py  evaluate_on_datasets.py  generate_graphs.py  train_on_datasets.sh
tests/: test_graph_nn_vae.py
(+114 files in other folders)
